# raphael-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  bench-solver.sh  build-web.sh  cloudflare-deploy.sh  index.html  install-deps-and-build.sh  rlvls_export.rs  rust-toolchain.toml  rust-versions.env  serve-web.sh
.cargo/: config.toml  config_wasm.toml
.github/: FUNDING.yml
.zed/: debug.json
assets/: _headers  manifest.json
bindings/: Cargo.toml  NativeMethods.g.cs  bindings.h
docs/: CNAME  dummy_worker.js  dummy_worker_bg.wasm  index.html  raphael-gui-4562044bac8a7aa0.js  raphael-gui-6c7890582085a429.js  raphael-gui-e4ccd2705d5b0f72.js  raphael-gui-f6135ef55e5ca9c4.js  raphael-gui-fd35864da645d425.js  raphael-xiv-1981d67c50246e84.js  raphael-xiv-212b9dbc507e66c6.js  raphael-xiv-2468824034e8edc7.js  raphael-xiv-2ba2c0651a104ddf.js  raphael-xiv-2fac3ef9babd73eb.js  raphael-xiv-2fd46143b1f213d6.js  raphael-xiv-35aae419dd090341.js  raphael-xiv-3996484b3273054e.js  raphael-xiv-3b26609eaf3ed3ad.js  raphael-xiv-3e8dad0863ddb2bc.js  raphael-xiv-40a5387479cd34ca.js  (+91 more)
game_data/: Cargo.toml  build.rs
game_data/data/: ItemAction.csv  ItemFood.csv  Recipe.csv  RecipeLevelTable.csv
game_data/src/: config.rs  consumables.rs  functions.rs  lib.rs  locales.rs
game_data/tests/: game_data_tests.rs  test_consumables.rs  test_get_game_settings.rs  test_item_names.rs  test_items.rs  test_recipes.rs
godot_extension/: Cargo.toml
godot_extension/src/: macro_solver_interface.rs
gui/: Cargo.toml  MacroSolverInterface.gd  control.tscn  custom-theme.tres  export_presets.cfg  icon.svg.import  index.html  project.godot  radial_progress.svg.import  raphael.gdextension
gui/data/: Items.txt
gui/resources/: radial_progress.svg.import
gui/scripts/: MacroSolverInterface.gd  RecipeDatabase.gd  RecipeSearchInput.gd
gui/src/: app.rs  assets.rs  dummy_worker.rs  lib.rs  main.rs
raphael-cli/: Cargo.toml
raphael-cli/benches/: bench_cli.rs
raphael-cli/examples/: branch_rerun.rs
raphael-cli/src/: main.rs
raphael-cli/src/commands/: ingredients.rs  mod.rs  raw_solve.rs  search.rs  search_mission.rs  search_recipe.rs  solve.rs  solve_raw.rs
raphael-data/: Cargo.toml
raphael-data-updater/: Cargo.toml  latest-versions.toml
raphael-data-updater/src/: consumable.rs  item.rs  level_adjust_table.rs  lib.rs  main.rs  non_contiguously_indexed_array_builder.rs  recipe.rs  stellar_mission.rs
raphael-data/benches/: bench_game_data.rs
raphael-data/data/: .~lock.Recipe.csv#  Recipe.csv  item_names_cn.rs  item_names_de.rs  item_names_en.rs  item_names_fr.rs  item_names_jp.rs  item_names_kr.rs  item_names_tw.rs  items.rs  level_adjust_table.rs  meals.rs  potions.rs  recipe_to_stellar_mission_link.rs  rlvls.rs  stellar_mission_names_cn.rs  stellar_mission_names_de.rs  stellar_mission_names_en.rs  stellar_mission_names_fr.rs  stellar_mission_names_jp.rs  stellar_mission_names_kr.rs  stellar_mission_names_tw.rs  stellar_missions.rs
raphael-data/src/: consumables.rs  lib.rs  locales.rs  non_contiguously_indexed_array.rs  search.rs
raphael-data/tests/: test_consumables.rs  test_get_game_settings.rs  test_item_names.rs  test_recipes.rs  test_stellar_missions.rs
raphael-sim/: Cargo.toml
raphael-sim/benches/: bench_simulator.rs
raphael-sim/src/: actions.rs  conditions.rs  effects.rs  lib.rs  probabilities.rs  settings.rs  state.rs
raphael-sim/tests/: action_tests.rs  adversarial_tests.rs  backload_progress_tests.rs  condition_tests.rs  effect_tests.rs  simulator_tests.rs
raphael-solver/: Cargo.toml
raphael-solver/examples/: macro_solver_example.rs
raphael-solver/src/: actions.rs  finish_solver.rs  lib.rs  score_ub_solver.rs  test_utils.rs
raphael-solver/src/macro_solver/: fast_lower_bound.rs  pareto_front.rs  search_queue.rs  solver.rs
raphael-solver/src/macro_solver/pareto_front/: effect_pareto_front.rs  mod.rs  quality_pareto_front.rs
raphael-solver/src/quality_upper_bound_solver/: mod.rs  pareto_builder.rs  solver.rs  state.rs  tests.rs
raphael-solver/src/step_lower_bound_solver/: mod.rs  solver.rs  state.rs  tests.rs
raphael-solver/src/utils/: mod.rs  pareto_front_builder.rs
raphael-solver/tests/: 00_edge_cases.rs  01_progress_backload_exhaustive.rs  01_progress_backload_non_exhaustive.rs  02_exhaustive.rs  02_progress_backload_exhaustive.rs  03_adversarial_exhaustive.rs  03_exhaustive.rs  04_adversarial_exhaustive.rs
raphael-translations/: Cargo.toml  build.rs  translations.toml  update-toml.sh
raphael-translations/src/: data.rs  input.rs  lib.rs  output.rs  translation.rs  util.rs
simulator/: Cargo.toml
simulator/benches/: bench_simulator.rs  from_macro.rs
simulator/src/: actions.rs  bench.rs  conditions.rs  effects.rs  lib.rs  probabilities.rs  settings.rs  state.rs  units.rs
simulator/tests/: action_tests.rs  adversarial_tests.rs  effect_tests.rs  simulator_tests.rs
solvers/: Cargo.toml
solvers/examples/: macro_solver_example.rs
solvers/src/: actions.rs  branch_pruning.rs  finish_solver.rs  lib.rs  macro_solver.rs  pareto_front.rs  pareto_front_builder.rs  upper_bound_solver.rs  utils.rs
solvers/src/macro_solver/: effect_pareto_front.rs  fast_lower_bound.rs  mod.rs  pareto_set.rs  quality_pareto_front.rs  quick_search.rs  search_queue.rs  solver.rs
solvers/src/macro_solver/pareto_front/: effect_pareto_front.rs  mod.rs  quality_pareto_front.rs
solvers/src/quality_upper_bound_solver/: mod.rs  solver.rs  state.rs  tests.rs
solvers/src/step_lower_bound_solver/: mod.rs  solver.rs  state.rs  tests.rs
solvers/src/upper_bound_solver/: mod.rs  solver.rs  state.rs
solvers/src/utils/: atomic_flag.rs  mod.rs  pareto_front_builder.rs
solvers/tests/: 00_edge_case_tests.rs  00_edge_cases.rs  01_normal_solver_tests.rs  01_progress_backload_non_exhaustive.rs  02_progress_backload_exhaustive.rs  02_progress_backload_solver_tests.rs  03_exhaustive.rs  03_min_step_solver_tests.rs  03_unsound_progress_backload_solver_tests.rs  04_adversarial_exhaustive.rs  04_adversarial_solver_tests.rs  adversarial_solver_tests.rs  macro_solver_tests.rs
(+105 files in other folders)
