[workspace]
members = [
    "raphael-sim",
    "raphael-solver",
    "raphael-data",
    "raphael-data-updater",
    "raphael-cli",
    "raphael-translations",
]
resolver = "2"

[workspace.lints]
clippy.assigning_clones = "warn"
clippy.single_char_pattern = "warn"
clippy.return_self_not_must_use = "warn"
clippy.format_push_string = "warn"
clippy.ref_option = "warn"
clippy.default_trait_access = "warn"
clippy.explicit_iter_loop = "warn"
clippy.unnecessary_semicolon = "warn"
clippy.redundant_closure_for_method_calls = "warn"
clippy.option_if_let_else = "warn"
clippy.use_self = "warn"

[workspace.dependencies]
raphael-sim = { path = "raphael-sim" }
raphael-solver = { path = "raphael-solver" }
raphael-data = { path = "raphael-data" }
raphael-translations = { path = "raphael-translations" }
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
web-time = "1.1.0"

[package]
name = "raphael-xiv"
version = "0.25.3"
edition = "2024"
default-run = "raphael-xiv"

[lints]
workspace = true

[dependencies]
raphael-sim = { workspace = true, features = ["serde"] }
raphael-solver = { workspace = true, features = ["serde"] }
raphael-data = { workspace = true, features = ["serde"] }
raphael-translations = { workspace = true }

egui = "0.33.2"
egui_extras = { version = "0.33.2", features = ["http", "webp"] }

rayon = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
web-time = { workspace = true }
ron = "0.11"
semver = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
ehttp = { version = "0.5.0", features = ["json"] }
# Default features of `eframe` include the "glow" renderer which is not needed if "wgpu" is enabled.
# To avoid including both in the binary, default features have to be disabled
eframe = { version = "0.33.2", default-features = false, features = [
    "accesskit",         # default
    "default_fonts",     # default
    "wayland",           # default
    "web_screen_reader", # default
    "x11",               # default
    "persistence",
    "wgpu",
] }
# Need to opt-in to wgpu as of egui 0.32.0. See release notes of egui for details.
# https://github.com/emilk/egui/releases/tag/0.32.0
wgpu = "27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
web-sys = "0.3"
eframe = { version = "0.33.2", features = ["persistence"] }

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
codegen-units = 1
panic = "abort"

[profile.release.package.egui]
opt-level = "s"

[profile.release.package.eframe]
opt-level = "s"

[profile.release-with-debug]
inherits = "release"
debug = true
debug-assertions = true

[profile.test]
opt-level = 3
lto = "thin"
overflow-checks = true

[features]
dev-panel = []
