[package]
name = "game-data"
edition = "2024"
build = "build/main.rs"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
simulator = { path = "../simulator" }
phf = "0.11.2"
serde = { version = "1.0.215", features = ["derive"], optional = true }

[build-dependencies]
csv = "1.1.6"
phf_codegen = "0.11.2"
serde = { version = "1.0.215", features = ["derive"] }

[features]
serde = ["dep:serde", "simulator/serde"]
