[package]
name = "raphael-cli"
version = "0.2.2"
edition = "2024"

[dependencies]
raphael-sim = { workspace = true }
raphael-solver = { workspace = true }
raphael-data = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }

clap = { version = "4.5.51", features = ["derive", "wrap_help", "env"] }

env_logger = "0.11.8"
