[package]
name = "raphael-data-updater"
edition = "2024"

[lints]
workspace = true

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
reqwest = "0.12.15"
non_contiguously_indexed_array_builder = { git = "https://github.com/augenfrosch/non_contiguously_indexed_array", rev = "0629de7b6fce8cf364e28fadbf34174110a9f92a", version = "0.2.0"}
json = "0.12.4"
log = { workspace = true }
env_logger = "0.11.5"
