[package]
name = "raphael-data"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
raphael-sim = { workspace = true }
phf = "0.11.2"
serde = { version = "1.0.215", features = ["derive"], optional = true }
unicode-normalization = "0.1.24"

[dev-dependencies]
expect-test = "1.5.1"

[features]
serde = ["dep:serde", "raphael-sim/serde"]
