[package]
name = "raphael-data"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
raphael-sim = { workspace = true }
non_contiguously_indexed_array = { git = "https://github.com/augenfrosch/non_contiguously_indexed_array", rev = "59bc352188361ba47bcca66c5a140a2b7580bb47", version = "0.4.1" }
serde = { version = "1.0.215", features = ["derive"], optional = true }
unicode-normalization = "0.1.24"

[dev-dependencies]
expect-test = "1.5.1"
criterion = "0.5.1"
rand = "0.9.1"

[features]
serde = ["dep:serde", "raphael-sim/serde"]

[[bench]]
name = "bench_game_data"
harness = false
