[package]
name = "raphael-data"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
raphael-sim = { workspace = true }
non_contiguously_indexed_array = { git = "https://github.com/augenfrosch/non_contiguously_indexed_array", rev = "4e9697707947c6b8273d3c655cb6fcfd6d822de8", version = "0.4.2", features = ["macros"] }
serde = { version = "1.0.215", features = ["derive"], optional = true }
nucleo-matcher = "0.3.1"

[dev-dependencies]
expect-test = "1.5.1"
criterion = "0.5.1"
rand = "0.9.1"

[features]
serde = ["dep:serde", "raphael-sim/serde"]

[[bench]]
name = "bench_game_data"
harness = false
