[package]
name = "raphael-sim"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"

[dependencies]
bitfield-struct = "0.12.1"
strum = "0.27"
strum_macros = "0.27"
serde = { workspace = true, optional = true }
log = { workspace = true }

[features]
serde = ["dep:serde"]

[[bench]]
name = "bench_simulator"
harness = false
