[package]
name = "raphael-translations"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
raphael-data = { workspace = true }
syn = "2.0"
proc-macro2 = { version = "1.0" }
quote = "1.0"
toml_edit = { workspace = true }
rustc-stable-hash = "0.1.2"
base64 = "0.22"

[build-dependencies]
toml_edit = { workspace = true }

[features]
default = []
update-toml = ["proc-macro2/span-locations"]
