[package]
name = "simulator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dev-dependencies]
more-asserts = "0.3.1"
rand = "0.8.5"

[dependencies]
bitfield-struct = "0.8.0"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4"
