[package]
name = "solvers"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
simulator = { path = "../simulator" }
radix-heap = "0.4.2"
rustc-hash = "1.1.0"
bitfield-struct = "0.8.0"

[dev-dependencies]
rand = "0.8.5"
