[package]
name = "solvers"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
simulator = { path = "../simulator" }
radix-heap = "0.4.2"
rustc-hash = "1.1.0"
bitfield-struct = "0.8.0"
log = "0.4"
env_logger = { version = "0.11.5", optional = true }
serde = { version = "1.0.215", features = ["derive"], optional = true }

[features]
env_logger = ["dep:env_logger"]
serde = ["dep:serde"]

[dev-dependencies]
rand = "0.8.5"
